<resources>
    <string name="app_name">Kooloco</string>
    <string name="splash_get_started">Get started</string>
    <string name="login_enter_email">Enter Email</string>
    <string name="login_password">Enter Password</string>
    <string name="login_lost">Lost?</string>
    <string name="login_don_t_have_an_account">Don\'t have an account?</string>
    <string name="login_dont_sign_up">Sign Up</string>
    <string name="sign_up_first_name">First Name</string>
    <string name="sign_up_last_name">Last Name</string>
    <string name="sign_up_email">Email</string>
    <string name="sign_up_create_password">Create Password</string>
    <string name="sign_up_confirm_password">Confirm Password</string>
    <string name="sign_up_referral_code">Referral Code</string>
    <string name="sign_up_referral_code_optional">(Optional)</string>
    <string name="sign_up_please_agree_terms">Please Agree Terms &amp; Conditions</string>
    <string name="become_a_local_name">Name</string>
    <string name="become_a_local_address">Address</string>
    <string name="become_a_local_telephone">Telephone / Mobile Number</string>
    <string name="become_a_local_introduce_your">Introduce Yourself</string>
    <string name="become_a_local_introduce_your_t">(100)</string>
    <string name="become_a_local_type_here">Type here...</string>
    <string name="become_a_local_type_here_new">Let our visitors know more about you...</string>
    <string name="become_a_local_please_agree_terms">Please Agree Terms &amp; Conditions</string>
    <string name="become_a_local_introduce_your_new">Introduce Yourself (100)</string>
    <string name="become_a_local_introduce_your_new_f">Introduce Yourself (400)</string>
    <string name="choose_languages_language_of_application">Language for your application</string>
    <string name="choose_languages_select_language">Select Languages</string>
    <string name="choose_languages_select_language_n">Select Language</string>
    <string name="choose_languages_language_of_speak">Spoken Languages</string>
    <string name="organization_details_activity_types">Activity Types</string>
    <string name="organization_details_sport_types">Sport Types</string>
    <string name="organization_details_location">Location</string>
    <string name="organization_details_locals">Locals</string>
    <string name="organization_details_images">Organization Images</string>
    <string name="add_participants_add_extra_participants">Add Extra Participants</string>
    <string name="add_participants_add_extra_participants_n">Participants</string>
    <string name="add_participants_add_email">Add Participant Email</string>
    <string name="add_participants_add_email_new">Add Participant Email</string>
    <string name="add_participants_min_duration">Min Duration</string>
    <string name="select_activities_select">Select Activities</string>
    <string name="select_activities_select_sport">Select Sport Activities</string>
    <string name="select_activities_select_session">Session</string>
    <string name="select_activities_select_session_des">Share a session</string>
    <string name="select_activities_select_lesson">Lesson</string>
    <string name="select_activities_select_lesson_des">Improve your skills</string>
    <string name="select_activities_select_discovery">Discovery</string>
    <string name="select_activities_select_discovery_des">Discover a spot</string>
    <string name="select_date_select_date">Select Date</string>
    <string name="select_date_start_time">Start Time</string>
    <string name="select_date_weather_forecast">Weather Forecast</string>
    <string name="select_date_min_duration">Min Duration</string>
    <string name="dashboard_nice_to_meet_you">Nice to meet you</string>
    <string name="dashboard_activities_time_slot">Activities Time Slot</string>
    <string name="dashboard_activities">Activities</string>
    <string name="dashboard_languages">Languages</string>
    <string name="dashboard_distance">Distance</string>
    <string name="dashboard_location">Location</string>
    <string name="dashboard_sport_types">Sport Types</string>
    <string name="dashboard_certificates">Certification</string>
    <string name="dashboard_achievements">Achievements</string>
    <string name="dashboard_associated_with">Associated With</string>
    <string name="dashboard_cancellation_policy">Cancellation Policy</string>
    <string name="dashboard_reviews">Reviews</string>
    <string name="dashboard_review">Review</string>
    <string name="dashboard_read_all">Read all</string>
    <string name="dashboard_cancellation_policy_value">Cancel up to 24 hours before your activity and get a full refund,\nincluding all fees. Cancel within 24 hours of activity and the first night is non-refundable except for fees.</string>
    <string name="duration_select_duration">Select Duration</string>
    <string name="duration_let">Let</string>
    <string name="duration_let_choose">choose the perfect duration</string>
    <string name="has_no_ava">has no availabilities on that day.</string>
    <string name="pleas_select_another_Date">Please select an other date.</string>
    <string name="meeting_location_let">Let ### choose the meeting spot for***the activity</string>
    <string name="meeting_location_choose">choose the meeting spot for the activity</string>
    <string name="meeting_location_set_location">Set Location</string>
    <string name="appointment_summery_activities">Activities</string>
    <string name="appointment_summery_date">Start Date</string>
    <string name="appointment_summery_time">Start Time</string>
    <string name="appointment_summery_duration">Duration</string>
    <string name="appointment_summery_participants">Participants</string>
    <string name="appointment_summery_meeting_spot">Meeting Spot</string>
    <string name="appointment_summery_sport_type">Sport Types</string>
    <string name="appointment_summery_let_the_local">Introduce Yourself</string>
    <string name="appointment_summery_write_here">Let the Local know more about you...</string>
    <string name="appointment_summery_price">Price</string>
    <string name="appointment_summery_additional_participants">Additional Participants</string>
    <string name="appointment_summery_fees_for_booking">Fees For Booking</string>
    <string name="appointment_summery_total_activity">Total Activity</string>
    <string name="appointment_summery_total_booking">Total</string>
    <string name="appointment_summery_note">Note ### :</string>
    <string name="appointment_summery_all_your_payment">Kooloco provides a two step payment validation system that protects users. We collect, hold and disburse funds only when both Buyers and Sellers are satisfied.</string>
    <string name="payment_add_new_card">Add New Card</string>
    <string name="payment_note">Note</string>
    <string name="payment_all_your_payment_will">Kooloco provides two steps payment validation that protects users. We collect, hold and only
disburse funds when both Buyers and Sellers are satisfied</string>
    <string name="payment_add_card">Add Card</string>
    <string name="appointment_booked_make_a_payment">Make a payment</string>
    <string name="appointment_booked_in_escrow_account">In escrow account</string>
    <string name="appointment_booked_complete_your_service">Complete your service</string>
    <string name="appointment_booked_free_the_amount">Free the amount</string>
    <string name="appointment_booked_thanks_for_the_booking">Thanks for the booking appointment\nlocal will get back to you soon</string>
    <string name="appointment_booked_book_another_day">Book Another Day</string>
    <string name="appointment_booked_your_experience">Adventure Booked</string>
    <string name="appointment_booked_secure_your_payment">Payment Secured</string>
    <string name="appointment_booked_complete_your_activity">Adventure Completed</string>
    <string name="appointment_booked_release_the_payment">Payment Released</string>
    <string name="receipt_activities">Activities</string>
    <string name="receipt_sport_types">Sport Types</string>
    <string name="receipt_date">Start Date</string>
    <string name="receipt_time">Start Time</string>
    <string name="receipt_duration">Duration</string>
    <string name="receipt_participants">Participants</string>
    <string name="receipt_meeting_spot">Meeting Point</string>
    <string name="receipt_price">Price</string>
    <string name="receipt_additional_participants">Additional Participants</string>
    <string name="receipt_fees_for_booking">Fees For Booking</string>
    <string name="receipt_total_activity">Total Activity</string>
    <string name="receipt_total_booking">Total Booking</string>
    <string name="receipt_raise_objection">Raise Objection</string>
    <string name="receipt_do_you_want_total_refund">Do you want a Total Refund?</string>
    <string name="receipt_do_you_want_percentage_discount">Do you want percentage discount.</string>
    <string name="receipt_do_you_want_flat_amount_discount">Do you want flat amount discount.</string>
    <string name="receipt_write_your_reason">Write your reason...</string>
    <string name="rating_rate_your_experience">Rate your Adventure with</string>
    <string name="rating_thank_you_for_your_feedback">Thank you for your feedback</string>
    <string name="rating_share_the_love">Share the love</string>
    <string name="rating_facebook">Facebook</string>
    <string name="rating_email">Email</string>
    <string name="rating_write_your_review">Write your review...</string>
    <string name="rating_book_another_day">Book Another Day</string>
    <string name="rating_what_can_be_improved">What can be improved?</string>
    <string name="rating_what_went_wrong">What went wrong?</string>
    <string name="rating_quality_price">Quality-price</string>
    <string name="rating_arrival_time">Arrival Time</string>
    <string name="rating_professionalism">Professionalism</string>
    <string name="button_submit">Submit</string>
    <string name="a_b_d_bank_name">Bank Name</string>
    <string name="a_b_d_account_holder_name">Account Holder Name</string>
    <string name="a_b_d_account_number">Account Number</string>
    <string name="a_b_d_routing_numbers">Routing Numbers</string>
    <string name="a_b_d_please_add_bank_details_of">Please add bank details of organization</string>
    <string name="a_b_d_please_enter_your_percentage_which_would">Please enter your percentage which would you like the total</string>
    <string name="a_b_d_define_percentage">Define Percentage for Org.</string>
    <string name="and">And</string>
    <string name="define_percentage">Define Percentage</string>
    <string name="home_tab_explore">Explore</string>
    <string name="home_tab_search">Search</string>
    <string name="home_tab_adventures">Adventures</string>
    <string name="home_tab_chat">Chat</string>
    <string name="home_tab_account">Account</string>
    <string name="home_tab_orders">Orders</string>
    <string name="home_tab_dashboard">Dashboard</string>
    <string name="order_status_completed">Completed</string>
    <string name="bsb_bank_number">BSB Bank ID Number</string>
    <string name="bsb_branch_id_number">BSB Branch ID Number</string>
    <string name="account_number">Account Number</string>
    <string name="bank_code">Bank Code</string>
    <string name="transit_number">Transit Number</string>
    <string name="branch_name">Branch Name</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="branch_code">Branch Code</string>
    <string name="building_society_account">Building Society Account</string>
    <string name="branch_sorting_code">Branch Sorting Code</string>
    <string name="add_bank_bank_account_type">Bank account type</string>
    <string name="tax_id_bank_account_holder_tax_id">Tax ID (bank account golder tax ID)</string>
</resources>